--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "envalid": "^8.1.0",
     "next": "15.4.6",
+    "plaiceholder": "^3.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zod": "^4.0.17"
