--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "plaiceholder": "^3.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sharp": "^0.34.3",
     "zod": "^4.0.17"
   },
   "devDependencies": {
